Fix shadowing technique
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>